adding new file

--- a/mysql/manifest.yaml
+++ b/mysql/manifest.yaml
@@ -24,3 +24,21 @@ spec:
       containers:
       - name: mysql
         image: venki8686/mysql:v1
+----
+
+kind: Service
+apiVersion: v1
+metadata:
+  name: mysql
+  namespace: expense
+spec:
+  selector:
+    app: mysql
+    tier: db
+    project: expense
+  ports:
+  - name: mysql-port
+    protocol: TCP
+    port: 3306 # service port
+    targetPort: 3306 # container ip
+
