--- a/mysql/manifest.yaml
+++ b/mysql/manifest.yaml
@@ -25,20 +25,20 @@ spec:
       - name: mysql
         image: venki8686/mysql:v1
 
-
-# kind: Service
-# apiVersion: v1
-# metadata:
-#   name: mysql
-#   namespace: expense
-# spec:
-#   selector:
-#     app: mysql
-#     tier: db
-#     project: expense
-#   ports:
-#   - name: mysql-port
-#     protocol: TCP
-#     port: 3306 #service port
-#     targetPort: 3306 #container ip
+----
+kind: Service
+apiVersion: v1
+metadata:
+  name: mysql
+  namespace: expense
+spec:
+  selector:
+    app: mysql
+    tier: db
+    project: expense
+ports:
+  - name: mysql-port
+    protocol: TCP
+    port: 3306 # service port
+    targetPort: 3306 # container ip
 
