--- a/backend/manifest.yaml
+++ b/backend/manifest.yaml
@@ -2,10 +2,10 @@ apiVersion: v1
 kind: ConfigMap
 metadata: 
   name: backend
-  namespaces: expense
+  namespace: expense
 data:
   DB_HOST: mysql
-    
+
 ---
 apiVersion: apps/v1
 kind: Deployment
