adding new file

--- a/backend/manifest.yaml
+++ b/backend/manifest.yaml
@@ -36,11 +36,11 @@ spec:
         resources: 
           requests: 
             cpu: 100m
-            memory: 128mi
+            memory: 128Mi
           # limits is greter than or equal to request
           limits:
             cpu: 100m
-            memory: 128mi 
+            memory: 128Mi
         envFrom:
         - configMapRef:
             name: backend
