adding new line

--- a/backend/manifest.yaml
+++ b/backend/manifest.yaml
@@ -60,4 +60,18 @@ spec:
     protocol: TCP
     port: 8080 # service port
     targetPort: 8080 # container ip
+---
 
+apiVersion: autoscaling/v1
+kind: HorizontalPodAutoscaler
+metadata:
+ name: backend
+namespace: expense
+spec:
+ scaleTargetRef:
+   apiVersion: apps/v1
+   kind: Deployment
+   name: backend
+ minReplicas: 1
+ maxReplicas: 10
+ targetCPUUtilizationPercentage: 15 #usually 75 in real environment.
