--- a/frontend/manifest.yaml
+++ b/frontend/manifest.yaml
@@ -51,3 +51,17 @@ spec:
     port: 80 # service port
     targetPort: 80 # container ip
 
+---
+apiVersion: autoscaling/v1
+kind: HorizontalPodAutoscaler
+metadata:
+ name: frontend
+ namespace: expense
+spec:
+ scaleTargetRef:
+   apiVersion: apps/v1
+   kind: Deployment
+   name: frontend
+ minReplicas: 1
+ maxReplicas: 10
+ targetCPUUtilizationPercentage: 15 #usually 75 in real environment.
