adding new user

--- a/backend/manifest.yaml
+++ b/backend/manifest.yaml
@@ -30,6 +30,10 @@ spec:
         tier: api
         project: expense
     spec:
+      initContainers:
+      - name: mysql-check
+        image: busybox:1.28
+        command: ['sh', '-c', "until nslookup mysql; do echo waiting for myservice; sleep 2; done"]  
       containers:
       - name: backend
         image: venki8686/backend:v1
@@ -44,6 +48,18 @@ spec:
         envFrom:
         - configMapRef:
             name: backend
+        readinessProbe:
+          tcpSocket:
+            port: 8080
+          initialDelaySeconds: 15
+          periodSeconds: 10
+        livenessProbe:
+          httpGet:
+            path: /healthz
+            port: 8080
+          initialDelaySeconds: 3
+          periodSeconds: 3
+
 ---
 kind: Service
 apiVersion: v1
