--- a/mysql/manifest.yaml
+++ b/mysql/manifest.yaml
@@ -24,7 +24,16 @@ spec:
       containers:
       - name: mysql
         image: venki8686/mysql:v1
-
+        readinessProbe:
+          tcpSocket:
+            port: 3306
+          initialDelaySeconds: 15
+          periodSeconds: 10
+        livenessProbe:
+          tcpSocket:
+            port: 3306
+          initialDelaySeconds: 15
+          periodSeconds: 10
 ---
 kind: Service
 apiVersion: v1
